app/assets/stylesheets/themes/dc_show.scss
body.dc_show {
  .breadcrumb {
    width: 100%;
    margin-top: 0;
    padding: $golden-ratio-1 $golden-ratio-2;

    li,
    li:active {
      font-size: $type-2;
    }
  }

  .breadcrumb li::before {
    height: 0.6em;
  }

  .work-type-container {
    border: 1px solid $gray-3;
    border-radius: 3px;

    .work-type {
      .work-title-wrapper {
        margin-top: $golden-ratio-3;
        margin-bottom: $golden-ratio-0;
      }

      .work-type-tag {
        font-size: $type-3;
        padding: 0 18px;
        margin-top: $golden-ratio-1;
      }

      .title-with-badges {
        padding: 0 23px;

        h1 {
          font-size: $type-5;
        }

        .label,
        .state {
          display: none;
        }
      }
    }
  }

  .works-panel {
    border: none;
    border-radius: none;
    box-shadow: none;
    padding: 0 $golden-ratio-5;

    .panel-heading {
      border-bottom: 1px solid $gray-3;
      padding: $golden-ratio-1 0;

      .panel-title {
        font-size: $type-5;
      }
    }

    .panel-body {
      .work-show {
        dt {
          font-size: $type-3;
          padding-top: $golden-ratio-1;
        }

        .tabular {
          .attribute {
            font-size: $type-3;
          }
        }
      }

      .attribute-abstract {
        padding-top: $golden-ratio-1;
      }

      .work-show.metadata-block {
        .metadata-group {
          display: flex;
          align-items: center;
          padding: $golden-ratio-1;

          dl {
            overflow: hidden;
            width: 100%;
            padding: 0;
            margin: 0;
          }
          dt {
            float: left;
            width: 30%;
            padding: $golden-ratio-0 0;
            margin: 0 !important;
          }
          dd {
            float: left;
            width: 70%;
            padding: $golden-ratio-0 0;
            margin: 0;

            ul.tabular {
              padding: 0;
              margin: 0;

              .attribute {
                font-size: $type-3;
              }
            }
          }
        }
        .metadata-group:nth-child(even) {
          background-color: $gray-0;
          border-radius: 5px;
        }
        .metadata-group:nth-child(odd) {
          background-color: $white;
          border-radius: 5px;
        }
      }

      .table {
        border-collapse: collapse;

        th {
          font-size: $type-3;
          background-color: $gray-0;
        }

        th:first-child {
          padding-left: 15px;
        }

        .thumbnail {
          margin: $golden-ratio-1;
        }

        tbody {
          .attribute {
            font-size: $type-3;
            padding: $golden-ratio-3 $golden-ratio-0;
          }
        }
      }
    }

    .abstract-panel {
      dt {
        display: none;
      }

      dd {
        .tabular {
          padding-left: 0;

          li {
            font-size: $type-3;
          }
        }
      }
    }
  }

  .uv-panel {
    padding: 0;
  }

  .items-panel {
    .panel-body {
      padding: 15px 0;
    }
  }

  .image-masthead {
    border-bottom: 0;
    margin-bottom: 25px;
    position: relative;
  }

  .dc-repository-show-elements-wrapper {
    visibility: hidden;
  }

  /**** Collection Show ****/
  .collection-image-masthead {
    width: 100%;
    height: 61.8vw;
    max-height: calc(90vh - 82px);
    position: relative;
    margin: 0;
    flex-direction: column;
    justify-content: flex-end;
    z-index: 0;

    .background-container {
      position: absolute;
      left: 0;
      right: 0;
      display: block;
      width: auto;
      height: 100%;
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;
      -webkit-filter: blur(1px);
      filter: blur(1px);
    }
  }

  .collection-title-masthead {
    width: 100%;
    height: 275px !important;
    min-height: 275px !important;
    margin-bottom: $golden-ratio-3;
  }

  .hyc-collection-metadata {
    padding-top: $golden-ratio-3;

    div > dt {
      padding-top: 5px
    }
  }

  .hyc-blacklight.hyc-bl-search.hyc-body.row {
    display: flex;
    justify-content: center;
  }

  // requested by the client, hide the breadcrumb on the collection show page
  #content-wrapper .breadcrumb {
    display: none;
  }
  /**** End Collection Show ****/

  /**** Responsive Styles ****/
  @media (max-width: 991px) {
    .work-type {
      .work-title-wrapper {
        margin-bottom: $golden-ratio-1;

        .title-with-badges {
          h1 {
            font-size: $type-4 !important;
          }
        }
      }
    }

    .works-panel {
      .panel-heading {
        .panel-title {
          font-size: $type-4 !important;
        }
      }
    }

    .panel-body {
      .work-show.metadata-block {
        .metadata-group {
          dd {
            padding: $golden-ratio-0 0 $golden-ratio-0 $golden-ratio-2 !important;
          }
        }
      }
    }
  }

  @media (max-width: 767px) {
    .work-type-container {
      border: 1px solid $gray-3;
      border-radius: 3px;
      margin-bottom: $golden-ratio-2;

      .work-type {
        .title-with-badges {
          padding: 0 $golden-ratio-3;
          h1 {
            font-size: $type-3 !important;
          }
        }
        .work-type-tag {
          font-size: $type-2;
          padding: 0 $golden-ratio-2;
          margin-bottom: 0;
          margin-top: $golden-ratio-0;
        }
      }
    }

    .works-panel {
      padding: 0px 12px;

      .panel-heading {
        .panel-title {
          font-size: $type-3 !important;
        }
      }

      .panel-body {
        .work-show {
          dt {
            font-size: $type-2;
          }
        }

        .table {
          margin-bottom: 0;

          th {
            font-size: $type-2;
          }

          .thumbnail {
            width: 100px
          }

          .attribute {
            font-size: $type-2 !important;
          }

          .attribute-date_uploaded {
            text-align: center;
          }
        }

        .metadata-group {
          ul {
            padding-left: $golden-ratio-1 !important;
          }
        }
      }

      .tabular {
        li {
          font-size: $type-2 !important;
        }
      }
    }

    // Collection show page
    .media-heading {
      margin-block-start: 0;
    }

    .media-left {
      display: none;
    }

    .hyc-bl-results {
      margin: 2em 0;
    }

    #content-wrapper.collection-container {
      margin-top: -65px;
    }

    .hyc-collection-metadata {
      word-wrap: break-word;
    }

    .hyc-blacklight.hyc-bl-results table {
      word-break: break-all;
    }
    .utk-digital-elements-wrapper > .container-fluid.d-flex {
      height: inherit;

      .row {
        height: inherit;
        justify-content: center;
        padding: 0 14px;
      }
    }

    h1 {
      font-size: 28px;
    }

    .collection-sub-banner, .homepage-sub-banner {
      top: 0;
    }
  }

  @media (max-width: 575px ) {
    .work-type-container {
      width: 120%;
    }

    .col-xs-12 .uv-panel {
      padding: 0;
    }

    .works-panel .panel-body .table tr .thumbnail {
      width: 80px;
    }

    // Collection show page
    .hyc-blacklight.hyc-bl-results table, .media-heading {
      font-size: 15px;
    }

    // The first and last elements of the table are hidden at such a small screen size
    .hyc-blacklight.hyc-bl-results table th:first-child,
    .hyc-blacklight.hyc-bl-results table td:first-child,
    .hyc-blacklight.hyc-bl-results table th:last-child,
    .hyc-blacklight.hyc-bl-results table td:last-child {
      display: none;
    }

    .hyc-blacklight.hyc-bl-search.hyc-body.row > .col-sm-8,
    .hyc-blacklight.hyc-bl-sort,
    .hyc-blacklight.hyc-bl-results {
      padding: 0;
    }

    .hyc-blacklight.hyc-bl-title > h2 {
      text-align: center;
    }

    .collection-title-row-content {
      display: flex;
      flex-wrap: wrap;
      justify-content: center;

      div, a {
        margin: 4px;
      }
    }

    .feature {
      margin: 0;
    }
  }
  /**** End Responsive Styles ****/
}

